<resources>
    <string name="app_name">MFT_RIDER</string>
    <!-- Login Screen -->
    <string name="login_title">Logistic login to my flower tree</string>
    <string name="phone_number">Phone number</string>
    <string name="user_name">User name</string>
    <string name="btn_continue">Continue</string>
    <string name="need_help">Need help?</string>
    <string name="call_us">Call us at</string>
    <string name="help_number">+98711 41000</string>
    <string name="access_token">access_token</string>
    <string name="logout">Logout</string>

    <!-- Otp Screen -->
    <string name="otp_title">Please enter 6 digit pin</string>
    <string name="otp">OTP</string>

    <string name="in_km">in KM</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_upload">Upload image</string>
    <string name="view_map">View Map</string>

    <!-- Menu item -->
    <string name="delivered">Delivered</string>
    <string name="accepted_order">Accepted Order</string>
    <string name="pending_order">Pending Order</string>
    <string name="all">All</string>


    <string name="delivery_address">Delivery Address</string>
    <string name="cart">Cart</string>
    <string name="upload_image">Upload Image</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="mark_delivered">Mark As Delivered</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>

    <string name="map_key">AIzaSyDEKaoUFAop3hQl68Kh127oFsaEJ88JTlg</string>

    <!-- shipping detail screen -->
    <string name="recipient_name">Recipient Name</string>
    <string name="delivery_city">Delivery City</string>
    <string name="recipient_number">Recipient Number</string>
    <string name="recipient_alt_number">Recipient Alternate Number</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="address_type">Address Type</string>


    <string name="no_data">No data found</string>
    <string name="reason">Please enter reason</string>
    <string name="upload_image_first">Please upload image</string>
    <string name="order_updated">Order status updated successfully</string>
    <string name="order_accepted">Order has bee accepted</string>
    <string name="upload_image_success">Image uploaded successfully</string>
    <string name="upload_image_failed">Image not uploaded</string>
    <string name="order_delivered">Order delivered successfully</string>

    <!-- Location resources -->
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="settings_file_name">com.techcamino.mft_rider.temp</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch activity</string>


</resources>