<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".55"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/hundred_two"
            android:layout_height="@dimen/hundred_two"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/gift" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_bottom_sheet_dialog_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".45">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/otp_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eighteen"
                android:text="@string/otp_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="@dimen/thirty"
                android:layout_marginEnd="@dimen/ten"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/otp_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/fifteen"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_fiber_pin_24" />

                    <EditText
                        android:id="@+id/otp_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/radius"
                        android:layout_marginLeft="@dimen/radius"
                        android:background="@null"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:maxLength="6"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/hint_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/maroon"
                android:visibility="gone"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/otp_verify"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/otp_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="@dimen/ten"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="@dimen/radius"
                app:cardElevation="0dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/ten"
                    android:gravity="center|center_vertical|center_horizontal"
                    android:text="@string/btn_continue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/twenty"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/footer_card"
                android:layout_width="match_parent"
                android:layout_height="@dimen/thirty"
                android:background="@drawable/footer_bg"
                app:layout_constraintBottom_toBottomOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|end"
                    android:layout_marginEnd="@dimen/ten"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/twelve"
                        android:text="@string/need_help"/>
                    <View
                        android:layout_width="@dimen/three"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/twelve"
                        android:text="@string/call_us"/>
                    <View
                        android:layout_width="@dimen/three"
                        android:layout_height="0dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help_number"
                        android:textSize="@dimen/twelve"
                        android:textColor="@color/blue"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>